--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
         </div>
     </header><br><br><br><br><br>
 <div class="about-head">
-  <h1>About Us</h1>
-  <p>Discover our story, vision, and the team behind our success</p>
+  <h1><a style="font-family:'Playfair Display',serif;">About Us</a></h1>
+  <p><i>Discover our story, vision, and the team behind our success</i></p>
   <button class="mode-toggle">🌙 Dark</button>
 </div>
 
@@ -39,7 +39,9 @@
     <div class="about-img"><img src="https://picsum.photos/600/400?random=1" alt="Story"></div>
     <div class="about-text">
       <h2>Our Story</h2>
-      <p>Started as a passionate group aiming to innovate and impact technology positively.</p>
+      <p><a style="font-family:'Playfair Display',serif; font-size: 25px;">Where Passion Meets Purpose</a><br>
+Founded in, 2023 by Coach Steven Raphael, Utasatanzania was born from a simple but powerful belief: no child's potential should be limited by their circumstances. What began as a dream in Kigoma has grown into a movement that combines sports excellence, education, and community transformation to create lasting change.
+</p>
       <a href="#" class="btn-primary">Read More</a>
     </div>
   </div>
@@ -47,15 +49,21 @@
     <div class="about-img"><img src="https://picsum.photos/600/400?random=2" alt="Vision"></div>
     <div class="about-text">
       <h2>Our Vision</h2>
-      <p>Creating sustainable solutions that empower communities worldwide.</p>
+      <p>A united Africa where every child has access to opportunities to grow their talents and achieve their dreams.
+</p>
       <a href="#" class="btn-primary">Read More</a>
     </div>
   </div>
   <div class="about-block" data-animate="fade-left">
     <div class="about-img"><img src="https://picsum.photos/600/400?random=3" alt="Team"></div>
     <div class="about-text">
-      <h2>Our Team</h2>
-      <p>Diverse and talented team driving innovation and excellence daily.</p>
+      <h2>Core Values</h2>
+      <p>&bull; Passion for sports and youth empowerment<br>
+         &bull; Discipline in training and character<br>
+         &bull; Hard work and perseverance<br>
+         &bull; Unity through sports<br>
+         &bull; Integrity in all actions<br>
+      </p>
       <a href="#" class="btn-primary">Read More</a>
     </div>
   </div>
@@ -63,15 +71,8 @@
     <div class="about-img"><img src="https://picsum.photos/600/400?random=4" alt="Mission"></div>
     <div class="about-text">
       <h2>Our Mission</h2>
-      <p>To deliver value, empower communities and bridge technology gaps.</p>
-      <a href="#" class="btn-primary">Read More</a>
-    </div>
-  </div>
-  <div class="about-block" data-animate="fade-left">
-    <div class="about-img"><img src="https://picsum.photos/600/400?random=5" alt="Growth"></div>
-    <div class="about-text">
-      <h2>Our Growth</h2>
-      <p>Constantly evolving and expanding to meet the needs of a dynamic world.</p>
+      <p>To create equal opportunities through sports, education, and community engagement.
+</p>
       <a href="#" class="btn-primary">Read More</a>
     </div>
   </div>
@@ -82,24 +83,28 @@
   <div class="timeline">
     <div class="timeline-item" data-animate="fade-up">
       <div class="timeline-icon"><img src="https://picsum.photos/100?random=10" alt="Logo1"></div>
-      <div class="timeline-content"><h3>2015 - Founded</h3><p>Company started with a passionate team ready to innovate.</p></div>
+      <div class="timeline-content"><h3>2023 - Founded</h3><p>First program created.</p></div>
     </div>
     <div class="timeline-item" data-animate="fade-left">
       <div class="timeline-icon"><img src="https://picsum.photos/100?random=11" alt="Logo2"></div>
-      <div class="timeline-content"><h3>2016 - First Product</h3><p>Launched our first successful product gaining recognition.</p></div>
+      <div class="timeline-content"><h3>2023 - First Youth Tournament</h3><p>First youth competition participation under (13 - 15) in Arusha.</p></div>
     </div>
     <div class="timeline-item" data-animate="fade-right">
       <div class="timeline-icon"><img src="https://picsum.photos/100?random=12" alt="Logo3"></div>
-      <div class="timeline-content"><h3>2018 - Expansion</h3><p>Expanded to international markets and grew our team.</p></div>
+      <div class="timeline-content"><h3>2023 - First Youth Developmental League Launched</h3><p>Community teams where mobilised to lauch the league.</p></div>
     </div>
     <div class="timeline-item" data-animate="fade-left">
       <div class="timeline-icon"><img src="https://picsum.photos/100?random=13" alt="Logo4"></div>
-      <div class="timeline-content"><h3>2020 - Innovation Award</h3><p>Received global recognition for our innovation and impact.</p></div>
+      <div class="timeline-content"><h3>2024 - Ligi Ya Kitaa Initiative Launched</h3><p>Received community recognition for our innovation and impact.</p></div>
     </div>
     <div class="timeline-item" data-animate="fade-right">
       <div class="timeline-icon"><img src="https://picsum.photos/100?random=14" alt="Logo5"></div>
-      <div class="timeline-content"><h3>2023 - Today</h3><p>Continuing to grow, innovate, and make a positive difference globally.</p></div>
+      <div class="timeline-content"><h3>2024 - Second Youth Tournament</h3><p>Second youth competition participation under (13 - 15) in Dar Es Salaam</p></div>
     </div>
+      <div class="timeline-item" data-animate="fade-left">
+      <div class="timeline-icon"><img scr="https://picsum.photos/100?random=14" alt="logo6"></div>
+    <div class="timeline-content"><h3>2025 - First Elite Program Launched</h3><p>Launched MADT Elite program.</p></div>
+  </div>
   </div>
 </section>
 
