--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@
        <div class="slide" style="background-image: url('img/mbili.jpg');"></div>
        <div class="slide" style="background-image: url('img/tatu.jpg');"></div>
     <div class="hero-content">
-       <h1>
-      At <span>Utasatanzania Sports Academy </span> we creating<br> Equal
+        <h1><p style="font-family: 'Playfair Display',serif; font-size: 31px;">Why We Exist</p>
+In Tanzania and across Africa:
+Millions of talented youth lack access to proper training and resources
+Girls face disproportionate barriers in sports participation
+Rural communities often get left behind in talent development
+We're changing this narrative—one player, one community at a time.<br><br><br>
+      At <span>Utasatanzania Sports Academy </span> we are creating<br> Equal
       Opportunities, Changing Lives Through Sports
        </h1>
-       <p>It's a path to a brighter future</p>
+        <p><a style="font-family: ''">It's a path to a brighter future</a></p>
      <div class="underline"></div>
     </div>
     </section>
@@ -50,32 +55,45 @@
     <section id="programs" class="programs">
         <div class="container">
             <div class="section-title">
-                <h2>Programu Za Michezo</h2>
-                <p>Tunatoa mafunzo ya kitaalamu katika michezo mbalimbali kwa vijana wenye umri tofautitofauti.</p>
+                <h2>OUR PROGRAMS</h2>
+                <p></p>
             </div>
             <div class="programs-grid">
                 <div class="program-card">
-                    <img src="https://images.unsplash.com/photo-1572612862557-6c3e4b9a7eb5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1171&q=80" alt="Soka">
+                    <img src="img/tatu.jpg" alt="program.html">
                     <div class="program-content">
-                        <h3>Soka</h3>
-                        <p>Mafunzo ya soka kwa wanaume na wanawake wenye umri kati ya miaka 6 hadi 18. Tunatoa mafunzo ya kitaalamu ya soka.</p>
-                        <a href="#" class="btn">Soma Zaidi</a>
+                        <h3>Sports Development Pathways</h3>
+                        <p><b>&bull; MADT Program:</b> Holistic development through <i>Mentorship, Academics, Development, and Talent</i> training<br>
+                            </p>
+                        <a href="#" class="btn">Read more</a>
                     </div>
                 </div>
                 <div class="program-card">
-                    <img src="https://images.unsplash.com/photo-1546519638-68e109498ffc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1190&q=80" alt="Basketball">
+                    <img src="img/mbili.jpg" alt="legue.html">
                     <div class="program-content">
-                        <h3>Basketball</h3>
-                        <p>Mafunzo ya mpira wa kikapu kwa vijana wenye umri tofautitofauti. Vijana watajifunza mbinu za kikapu.</p>
-                        <a href="#" class="btn">Soma Zaidi</a>
+                        <h3>League & Tournaments</h3>
+                        <p><b>&bull; United Developmental League (UDL):</b> Grassroots competition platform<br>
+                           <b>&bull; United Talents Cup:</b> Annual youth tournament in Kigoma District</p>
+                        <a href="#" class="btn">Read more</a>
                     </div>
                 </div>
                 <div class="program-card">
-                    <img src="https://images.unsplash.com/photo-1551632811-561732d1e306?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Volleyball">
+                    <img src="img/hero.jpg" alt="travel.html">
                     <div class="program-content">
-                        <h3>Volleyball</h3>
-                        <p>Mafunzo ya mpira wa wavu kwa wanafunzi wa shule za msingi na sekondari. Tunatoa mafunzo ya kitaalamu.</p>
-                        <a href="#" class="btn">Soma Zaidi</a>
+                        <h3>Tours & Exchange</h3>
+                        <p><b>&bull; Travel With Us:</b> Exposure trips for cultural exchange</p>
+                        <a href="#" class="btn">Read more</a>
+                    </div>
+                </div>
+                <div class="program-card">
+                    <img scr="img/tatu.jpg" alt="hubs.html">
+                    <div class="program-content">
+                        <h3>Community Hubs</h3>
+                        <p><b>The hubs serve as safe space to Communities;</b> who can't reach us but we conduct Weekly sessions using sports as a tool.<br>
+                            <b>&bull; Sports <i>(Such as Soccer & Netball)</i></b><br>
+                            <b>&bull; Hygiene</b><br>
+                            <b>&bull; Reproductive health</b><br>
+                            <b>&bull; Leadership</b></p>
                     </div>
                 </div>
             </div>
@@ -236,47 +254,58 @@
     </section>
 
     <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-logo">
-                    <h2>UTASA <span>SPORTS</span> ACADEMY</h2>
-                    <p>Kukuza vipaji vya vijana kupitia michezo na kuwapa nafasi ya kujikuza katika fani wanazozipenda.</p>
-                </div>
-                <div class="footer-links">
-                    <h3>Viungo Muhimu</h3>
-                    <ul>
-                        <li><a href="#home">Nyumbani</a></li>
-                        <li><a href="#about">Kuhusu sisi</a></li>
-                        <li><a href="#programs">Michezo</a></li>
-                        <li><a href="#team">Timu</a></li>
-                        <li><a href="#contact">Mawasiliano</a></li>
-                    </ul>
-                </div>
-                <div class="footer-links">
-                    <h3>Michezo Yetu</h3>
-                    <ul>
-                        <li><a href="#">Soka</a></li>
-                        <li><a href="#">Basketball</a></li>
-                        <li><a href="#">Volleyball</a></li>
-                        <li><a href="#">Tenis</a></li>
-                        <li><a href="#">Rugby</a></li>
-                    </ul>
-                </div>
-                <div class="footer-newsletter">
-                    <h3>Jiandikishe Kwa Taarifa Zaidi</h3>
-                    <p>Jiandikishe kwa newsletter yetu kupata taarifa muhimu kuhusu michezo na matukio yetu.</p>
-                    <form class="newsletter-form">
-                        <input type="email" placeholder="Barua pepe yako" required>
-                        <button type="submit"><i class="fas fa-paper-plane"></i></button>
-                    </form>
-                </div>
-            </div>
-            <div class="copyright">
-                <p>&copy; 2025 Utasatanzania Sports Academy. Haki zote zimehifadhiwa.</p>
-            </div>
-        </div>
-    </footer>
+<footer class="footer">
+  <div class="footer-container">
+    <!-- Brand / Logo -->
+    <div class="footer-col brand">
+      <img src="img/utasalogo.png" alt="Logo" class="footer-logo">
+        <p>Utasatanzania – <i>Creating Equal Opportunities, Changing Lives Through Sports.</i></p>
+    </div>
+
+    <!-- Quick Links -->
+    <div class="footer-col">
+      <h4>Quick Links</h4>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Matches</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Resources -->
+    <div class="footer-col">
+      <h4>Resources</h4>
+      <ul>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms & Conditions</a></li>
+        <li><a href="#">Help Center</a></li>
+      </ul>
+    </div>
+
+    <!-- Social Media -->
+    <div class="footer-col">
+      <h4>Follow Us</h4>
+      <div class="social-links">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bottom bar -->
+  <div class="footer-bottom">
+    <p>© 2025 Utasatanzania Football Sports. All Rights Reserved.</p>
+    <p>Designed with ❤️ by <a href="https://github.com/Anonmad/Anonmad.git">Anonmad_Tech.</a></p>
+  </div>
+</footer>
+    
+    <!-- FontAwesome CDN -->
+<script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
 
     <script src="script.js"></script>
 </body>
