--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@ We're changing this narrative—one player, one community at a time.<br><br><br>
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>Kuhusu Utasa Sports Academy</h2>
-                    <p>Utasa Sports Academy ilianzishwa mwaka 2010 kwa lengo la kukuza vipaji vya vijana katika michezo. Tuna imani kuwa michezo ni muhimu kwa ukuaji wa kimwili, kiakili na kijamii kwa vijana wetu.</p>
-                    <p>Kwa miaka 13 tumekuwa tukitoa mafunzo ya kitaalamu kwa vijana wengi ambao sasa wanaendelea na taaluma zao katika ngazi za juu za kimataifa.</p>
-                    <p>Tunakuza sio tu ujuzi wa michezo bali pana maadili ya ushirikiano, nidhamu na uongozi mwema kwa vijana wetu.</p>
-                    <a href="#contact" class="btn">Jiunge Nasi</a>
+                    <h2><a style="color: white; font-family:'Playfair Display',serif;">Kuhusu UTASATANZANIA</a></h2>
+                    <p style="color: darkslategray">Utasa Sports Academy ilianzishwa mwaka 2010 kwa lengo la kukuza vipaji vya vijana katika michezo. Tuna imani kuwa michezo ni muhimu kwa ukuaji wa kimwili, kiakili na kijamii kwa vijana wetu.</p>
+                    <p style="color: darkslategray">Kwa miaka 13 tumekuwa tukitoa mafunzo ya kitaalamu kwa vijana wengi ambao sasa wanaendelea na taaluma zao katika ngazi za juu za kimataifa.</p>
+                    <p style="color: darkslategray">Tunakuza sio tu ujuzi wa michezo bali pana maadili ya ushirikiano, nidhamu na uongozi mwema kwa vijana wetu.</p>
+                    <a href="#contact" class="btn">Jiunge nasi</a>
                 </div>
                 <div class="about-image">
                     <img src="https://images.unsplash.com/photo-1599058917765-a780eda07a3e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1169&q=80" alt="About Future Stars Academy">
@@ -174,8 +174,7 @@ We're changing this narrative—one player, one community at a time.<br><br><br>
     <section id="testimonials" class="testimonials">
         <div class="container">
             <div class="section-title">
-                <h2>Maoni Kutoka kwa Wazazi</h2>
-                <p>Yale wazazi na waliojiunga na akademi yetu wanachosema kuhusu huduma zetu.</p>
+                <h2><a style="color: white">Maoni kuhusu wazazi</a></h2>
             </div>
             <div class="testimonial-grid">
                 <div class="testimonial">
@@ -222,30 +221,30 @@ We're changing this narrative—one player, one community at a time.<br><br><br>
             <div class="contact-grid">
                 <div class="contact-info">
                     <h3>Taarifa za Mawasiliano</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> Barabara ya Soka, Jijini Dar es Salaam</p>
-                    <p><i class="fas fa-phone"></i> +255 123 456 789</p>
-                    <p><i class="fas fa-envelope"></i> info@utasatanzaniaacademy.org</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Sabasaba Road, Kigoma - Tanzania</p>
+                    <p><i class="fas fa-phone"></i> +255 000 000 000</p>
+                    <p><i class="fas fa-envelope"></i><a href="utasatanzania@gmail.com"> info@utasatanzania.org</a></p>
                     <p><i class="fas fa-clock"></i> Jumatatu - Ijumaa: 8:00 asubuhi - 6:00 jioni</p>
                     <p><i class="fas fa-clock"></i> Jumamosi: 9:00 asubuhi - 2:00 mchana</p>
                     
                     <div class="map" style="margin-top: 20px;">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.420892300841!2d39.2672584747006!3d-6.697295066015782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c58e5c971d32d%3A0x614e6b90ce2d4e2b!2sDar%20es%20Salaam%2C%20Tanzania!5e0!3m2!1sen!2sus!4v1689879962639!5m2!1sen!2sus" width="100%" height="200" style="border:0; border-radius: 8px;" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.5213864756006!2d29.64404367262675!3d-4.874070439224069!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19bf1b001ee68081%3A0x51149adab7c5323e!2sSabasaba!5e1!3m2!1sen!2sus!4v1758154020252!5m2!1sen!2sus" width="550" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
                 <div class="contact-form">
                     <h3>Tuma Ujumbe</h3>
-                    <form>
+                    <form action="kachiratechnology@gmail.com" method="post" enctype="text/plain">
                         <input type="text" placeholder="Jina Kamili" required>
                         <input type="email" placeholder="Barua Pepe" required>
                         <input type="tel" placeholder="Namba ya Simu" required>
                         <select required>
                             <option value="" disabled selected>Chagua Programu</option>
-                            <option value="soccer">Soka</option>
+                            <option value="soccer">Soka/Football</option>
                             <option value="basketball">Basketball</option>
                             <option value="volleyball">Volleyball</option>
                             <option value="tennis">Tenis</option>
                         </select>
-                        <textarea placeholder="Ujumbe wako" required></textarea>
+                        <textarea placeholder="Andika ujumbe wako hapa" required></textarea>
                         <button type="submit" class="btn">Tuma Ujumbe</button>
                     </form>
                 </div>
@@ -258,16 +257,16 @@ We're changing this narrative—one player, one community at a time.<br><br><br>
   <div class="footer-container">
     <!-- Brand / Logo -->
     <div class="footer-col brand">
-      <img src="img/utasalogo.png" alt="Logo" class="footer-logo">
-        <p>Utasatanzania – <i>Creating Equal Opportunities, Changing Lives Through Sports.</i></p>
+      <img src="img/utasalogo.png" alt="index.html" class="footer-logo">
+        <p><i>Creating Equal Opportunities, Changing Lives Through Sports.</i></p>
     </div>
 
     <!-- Quick Links -->
     <div class="footer-col">
       <h4>Quick Links</h4>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About us</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About us</a></li>
         <li><a href="#">Matches</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Contact</a></li>
@@ -281,7 +280,7 @@ We're changing this narrative—one player, one community at a time.<br><br><br>
         <li><a href="#">Blog</a></li>
         <li><a href="#">Privacy Policy</a></li>
         <li><a href="#">Terms & Conditions</a></li>
-        <li><a href="#">Help Center</a></li>
+        <li><a href="utasatanzania@gmail.com">Help Center</a></li>
       </ul>
     </div>
 
@@ -299,8 +298,8 @@ We're changing this narrative—one player, one community at a time.<br><br><br>
 
   <!-- Bottom bar -->
   <div class="footer-bottom">
-    <p>© 2025 Utasatanzania Football Sports. All Rights Reserved.</p>
-    <p>Designed with ❤️ by <a href="https://github.com/Anonmad/Anonmad.git">Anonmad_Tech.</a></p>
+      <p><b>&copy; 2025 Utasatanzania.</b> <i>All Rights Reserved.</i></p>
+    <p>Designed by <a href="https://github.com/Anonmad/Anonmad.git">Anonmad_Tech.</a></p>
   </div>
 </footer>
     
