--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="#programs">Program</a></li>
                     <li><a href="#team">Team</a></li>
                     <li><a href="#testimonials">Registration</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -231,81 +231,60 @@ We're changing this narrative—one player, one community at a time.<br><br><br>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.5213864756006!2d29.64404367262675!3d-4.874070439224069!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19bf1b001ee68081%3A0x51149adab7c5323e!2sSabasaba!5e1!3m2!1sen!2sus!4v1758154020252!5m2!1sen!2sus" width="550" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
-                <div class="contact-form">
-                    <h3>Tuma Ujumbe</h3>
-                    <form action="kachiratechnology@gmail.com" method="post" enctype="text/plain">
-                        <input type="text" placeholder="Jina Kamili" required>
-                        <input type="email" placeholder="Barua Pepe" required>
-                        <input type="tel" placeholder="Namba ya Simu" required>
-                        <select required>
-                            <option value="" disabled selected>Chagua Programu</option>
-                            <option value="soccer">Soka/Football</option>
-                            <option value="basketball">Basketball</option>
-                            <option value="volleyball">Volleyball</option>
-                            <option value="tennis">Tenis</option>
-                        </select>
-                        <textarea placeholder="Andika ujumbe wako hapa" required></textarea>
-                        <button type="submit" class="btn">Tuma Ujumbe</button>
-                    </form>
-                </div>
+                <button class="big-button" onclick="window.location.href='contact.html'">
+                    Tuma Ujumbe Wako
+                </button>
             </div>
         </div>
     </section>
-
     <!-- Footer -->
-<footer class="footer">
-  <div class="footer-container">
-    <!-- Brand / Logo -->
-    <div class="footer-col brand">
-      <img src="img/utasalogo.png" alt="index.html" class="footer-logo">
-        <p><i>Creating Equal Opportunities, Changing Lives Through Sports.</i></p>
-    </div>
-
-    <!-- Quick Links -->
-    <div class="footer-col">
-      <h4>Quick Links</h4>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About us</a></li>
-        <li><a href="#">Matches</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
-
-    <!-- Resources -->
-    <div class="footer-col">
-      <h4>Resources</h4>
-      <ul>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Terms & Conditions</a></li>
-        <li><a href="utasatanzania@gmail.com">Help Center</a></li>
-      </ul>
-    </div>
-
-    <!-- Social Media -->
-    <div class="footer-col">
-      <h4>Follow Us</h4>
-      <div class="social-links">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
-      </div>
-    </div>
-  </div>
-
-  <!-- Bottom bar -->
-  <div class="footer-bottom">
-      <p><b>&copy; 2025 Utasatanzania.</b> <i>All Rights Reserved.</i></p>
-    <p>Designed by <a href="https://github.com/Anonmad/Anonmad.git">Anonmad_Tech.</a></p>
-  </div>
-</footer>
-    
+    <footer class="footer">
+        <div class="footer-container">
+            <!-- Brand / Logo -->
+            <div class="footer-col brand">
+                <img src="img/utasalogo.png" alt="index.html" class="footer-logo">
+                <p><i>Creating Equal Opportunities, Changing Lives Through Sports.</i></p>
+            </div>
+            <!-- Quick Links -->
+            <div class="footer-col">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About us</a></li>
+                    <li><a href="#">Matches</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <!-- Resources -->
+            <div class="footer-col">
+                <h4>Resources</h4>
+                <ul>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="utasatanzania@gmail.com">Help Center</a></li>
+                </ul>
+            </div>
+            <!-- Social Media -->
+            <div class="footer-col">
+                <h4>Follow Us</h4>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
+        <!-- Bottom bar -->
+        <div class="footer-bottom">
+            <p><b>&copy; 2025 Utasatanzania.</b> <i>All Rights Reserved.</i></p>
+            <p>Designed by <a href="https://github.com/Anonmad/Anonmad.git">Anonmad_Tech.</a></p>
+        </div>
+    </footer>
     <!-- FontAwesome CDN -->
-<script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
-
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
