--- a/index.html
+++ b/index.html
@@ -231,9 +231,27 @@ We're changing this narrative—one player, one community at a time.<br><br><br>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.5213864756006!2d29.64404367262675!3d-4.874070439224069!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19bf1b001ee68081%3A0x51149adab7c5323e!2sSabasaba!5e1!3m2!1sen!2sus!4v1758154020252!5m2!1sen!2sus" width="550" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
-                <button class="big-button" onclick="window.location.href='contact.html'">
-                    Tuma Ujumbe Wako
-                </button>
+                <a href="contact.html" class="btn-link">Tuma Ujumbe</a>
+
+<style>
+.btn-link {
+  display: inline-block;
+  background: #4CAF50;
+  color: white;
+  padding: 12px 24px;
+  border-radius: 25px;
+  text-decoration: none;
+  font-size: 25px;
+  transition: 0.3s;
+    text-align: center;
+    font-family: initial;
+}
+.btn-link:hover {
+  background: #388E3C;
+  transform: scale(1.05);
+}
+</style>
+
             </div>
         </div>
     </section>
