--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Utasa Sports Academy</title>
+    <title>Utasatanzania</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -231,23 +231,7 @@ We're changing this narrative—one player, one community at a time.<br><br><br>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.5213864756006!2d29.64404367262675!3d-4.874070439224069!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19bf1b001ee68081%3A0x51149adab7c5323e!2sSabasaba!5e1!3m2!1sen!2sus!4v1758154020252!5m2!1sen!2sus" width="550" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
-                <div class="contact-form">
-                    <h3>Tuma Ujumbe</h3>
-                    <form>
-                        <input type="text" placeholder="Jina Kamili" required>
-                        <input type="email" placeholder="Barua Pepe" required>
-                        <input type="tel" placeholder="Namba ya Simu" required>
-                        <select required>
-                            <option value="" disabled selected>Chagua Programu</option>
-                            <option value="soccer">Soka</option>
-                            <option value="basketball">Basketball</option>
-                            <option value="volleyball">Volleyball</option>
-                            <option value="tennis">Tenis</option>
-                        </select>
-                        <textarea placeholder="Ujumbe wako" required></textarea>
-                        <button type="submit" class="btn">Tuma Ujumbe</button>
-                    </form>
-                </div>
+                
             </div>
         </div>
     </section>
